[Sonar] Inerfficient Number constructor - use valueOf instead